# dash-object-detection

./: app.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
some_package/: __init__.py
some_package/module1/: do_other_stuff.py  do_stuff.py
some_package/module2/: carry_on.py
tests/: test_do_other_stuff.py
