[tool.poetry]
name = "dash-object-detection"
version = "0.1.0"
description = "a Dash app to demo object detection"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dash_object_detection"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.3"
Pillow = "^9.2.0"
dash = "^2.6.2"
gunicorn = "^20.1.0"
scipy = "^1.9.1"
pandas = "^1.5.0"
Flask = "^2.2.2"
dash-player = "^0.0.1"
pathlib = "^1.0.1"
pytest = "^7.1.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
